# sunbeam-ai-inspector

./: .env.example  .gitignore  README.md  pyproject.toml
sunbeam_rca/: __init__.py  __main__.py  cli.py  config.py  graph.py  models.py  state.py
sunbeam_rca/agents/: base_agent.py  infra_agent.py  juju_agent.py  k8s_agent.py  models.py  network_agent.py  observability_agent.py  orchestrator.py  pipeline_agent.py  prompts.py  router.py  storage_agent.py
sunbeam_rca/analysis/: baseline.json  baseline.py  causal_chains.py  noise_filter.py  noise_filters.yaml  pattern_matcher.py  patterns.yaml  prompts.py
sunbeam_rca/collectors/: pipeline_collector.py  sosreport_collector.py
sunbeam_rca/nodes/: agents.py  analyze.py  collect.py  parse.py  report.py  score.py
sunbeam_rca/parsers/: base.py  cloud_init_parser.py  dmesg_parser.py  juju_models_parser.py  juju_parser.py  juju_status_parser.py  k8s_pod_log_parser.py  ovn_parser.py  pipeline_parser.py  sunbeam_log_parser.py  syslog_parser.py
sunbeam_rca/utils/: sanitizer.py  timestamps.py
sunbeam_rca/web/: api.py  app.py  downloader.py
sunbeam_rca/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_causal_chains.py  test_cloud_init_parser.py  test_graph_integration.py  test_juju_models_parser.py  test_juju_status_parser.py  test_k8s_pod_log_parser.py  test_noise_filter.py  test_ovn_parser.py  test_parsers.py  test_pattern_matcher.py  test_scoring.py
